force-app/main/default/objects/Contact/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>口座番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>