force-app/main/default/objects/Contact/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account.BillingState + Account.BillingCity + Account.BillingStreet</formula>
    <label>住所</label>
    <type>Text</type>
</CustomField>