force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISNULL(Birthdate) , 
&quot;&quot;, 
IF( LEN(TEXT ( FLOOR (( Today() - Birthdate ) / 365) ) ) == 2, 
TEXT ( FLOOR (( Today() - Birthdate ) / 365) ) , 
&quot;0&quot; &amp; TEXT ( FLOOR (( Today() - Birthdate ) / 365) ) 
) 

&amp; &quot;年&quot; &amp; 

IF( LEN(TEXT ( FLOOR ( MOD (Today() - Birthdate , 365 ) / 30.5 )) ) == 2, 
TEXT ( FLOOR ( MOD (Today() - Birthdate , 365 ) / 30.5 )) , 
&quot;0&quot; &amp; TEXT ( FLOOR ( MOD (Today() - Birthdate , 365 ) / 30.5 )) 
) 

&amp; &quot;ヶ月&quot; 

)</formula>
    <label>年齢</label>
    <type>Text</type>
</CustomField>