force-app/main/default/objects/Contact/fields/AnotherAffiliation__c.field-meta.xml
<CustomField>
    <fullName>AnotherAffiliation__c</fullName>
    <label>所属の別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1号認定</fullName>
            </value>
            <value>
                <fullName>2号認定</fullName>
            </value>
            <value>
                <fullName>3号認定</fullName>
            </value>
            <value>
                <fullName>1号認定新2号</fullName>
            </value>
            <value>
                <fullName>1号認定（2歳児）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>