force-app/main/default/objects/Contact/fields/Belongs__c.field-meta.xml
<CustomField>
    <fullName>Belongs__c</fullName>
    <label>所属</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>幼稚園部</fullName>
            </value>
            <value>
                <fullName>保育園部の標準時間</fullName>
            </value>
            <value>
                <fullName>保育園部の短時間</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>