force-app/main/default/objects/Contact/fields/Bento__c.field-meta.xml
<CustomField>
    <fullName>Bento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>お弁当</label>
    <type>Checkbox</type>
</CustomField>