force-app/main/default/objects/Contact/fields/BusStop__c.field-meta.xml
<CustomField>
    <fullName>BusStop__c</fullName>
    <label>バス停</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>バス停１</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>