force-app/main/default/objects/Contact/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <label>カード番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>