force-app/main/default/objects/Contact/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>学級</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>★★ぐみ</fullName>
            </value>
            <value>
                <fullName>●●ぐみ</fullName>
            </value>
            <value>
                <fullName>▼▼ぐみ</fullName>
            </value>
            <value>
                <fullName>ゆり</fullName>
            </value>
            <value>
                <fullName>きく</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>