force-app/main/default/objects/Contact/fields/EntryDate__c.field-meta.xml
<CustomField>
    <fullName>EntryDate__c</fullName>
    <label>入園年月日</label>
    <type>Date</type>
</CustomField>