force-app/main/default/objects/Contact/fields/GoingToUniversity__c.field-meta.xml
<CustomField>
    <fullName>GoingToUniversity__c</fullName>
    <label>進学先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>●●小学校</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>