force-app/main/default/objects/Contact/fields/GraduationDate__c.field-meta.xml
<CustomField>
    <fullName>GraduationDate__c</fullName>
    <label>卒園年月日</label>
    <type>Date</type>
</CustomField>