force-app/main/default/objects/Contact/fields/GraduationNumber__c.field-meta.xml
<CustomField>
    <fullName>GraduationNumber__c</fullName>
    <label>卒園番号</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>