force-app/main/default/objects/Contact/fields/Guardian1__c.field-meta.xml
<CustomField>
    <fullName>Guardian1__c</fullName>
    <formula>Account.Name</formula>
    <label>保護者１</label>
    <type>Text</type>
</CustomField>