force-app/main/default/objects/Contact/fields/Guardian2__c.field-meta.xml
<CustomField>
    <fullName>Guardian2__c</fullName>
    <formula>Account.Name2__c</formula>
    <label>保護者名２</label>
    <type>Text</type>
</CustomField>