force-app/main/default/objects/Contact/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE( PhotoURL__c , FirstName , 100 , 100)</formula>
    <label>写真</label>
    <type>Text</type>
</CustomField>