force-app/main/default/objects/Contact/fields/kana__c.field-meta.xml
<CustomField>
    <fullName>kana__c</fullName>
    <label>ふりがな</label>
    <length>20</length>
    <type>Text</type>
</CustomField>