force-app/main/default/objects/Contact/fields/mail2__c.field-meta.xml
<CustomField>
    <fullName>mail2__c</fullName>
    <label>メール２</label>
    <type>Email</type>
</CustomField>