force-app/main/default/objects/Contact/fields/mail3__c.field-meta.xml
<CustomField>
    <fullName>mail3__c</fullName>
    <label>メール３</label>
    <type>Email</type>
</CustomField>