force-app/main/default/objects/Contact/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <formula>Account.Mail__c</formula>
    <label>メールアドレス</label>
    <type>Text</type>
</CustomField>