force-app/main/default/objects/Contact/fields/memo1__c.field-meta.xml
<CustomField>
    <fullName>memo1__c</fullName>
    <formula>Account.memo1__c</formula>
    <label>緊急連絡先1メモ</label>
    <type>Text</type>
</CustomField>