force-app/main/default/objects/Contact/fields/memo2__c.field-meta.xml
<CustomField>
    <fullName>memo2__c</fullName>
    <formula>Account.memo2__c</formula>
    <label>緊急連絡先2メモ</label>
    <type>Text</type>
</CustomField>