force-app/main/default/objects/Contact/fields/memo3__c.field-meta.xml
<CustomField>
    <fullName>memo3__c</fullName>
    <formula>Account.memo3__c</formula>
    <label>緊急連絡先3メモ</label>
    <type>Text</type>
</CustomField>