force-app/main/default/objects/Contact/fields/Number2__c.field-meta.xml
<CustomField>
    <fullName>Number2__c</fullName>
    <label>__園児番号__</label>
    <length>20</length>
    <type>Text</type>
</CustomField>