force-app/main/default/objects/Contact/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>園児番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>