force-app/main/default/objects/Contact/fields/PassageRoute__c.field-meta.xml
<CustomField>
    <fullName>PassageRoute__c</fullName>
    <label>通園コース</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>犬１</fullName>
            </value>
            <value>
                <fullName>犬２</fullName>
            </value>
            <value>
                <fullName>ネコ１</fullName>
            </value>
            <value>
                <fullName>ネコ２</fullName>
            </value>
            <value>
                <fullName>ビーバー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>