force-app/main/default/objects/Contact/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>TEXT(Account.School__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>幼稚園</label>
    <type>Text</type>
</CustomField>