force-app/main/default/objects/Contact/fields/SchoolLunch__c.field-meta.xml
<CustomField>
    <fullName>SchoolLunch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完全給食</label>
    <type>Checkbox</type>
</CustomField>