force-app/main/default/objects/Contact/fields/StoreNumber__c.field-meta.xml
<CustomField>
    <fullName>StoreNumber__c</fullName>
    <label>店番号</label>
    <length>3</length>
    <type>Text</type>
</CustomField>