force-app/main/default/objects/Contact/fields/tel1__c.field-meta.xml
<CustomField>
    <fullName>tel1__c</fullName>
    <formula>Account.tel1__c</formula>
    <label>緊急連絡先1</label>
    <type>Text</type>
</CustomField>