force-app/main/default/objects/Contact/fields/tel2__c.field-meta.xml
<CustomField>
    <fullName>tel2__c</fullName>
    <formula>Account.tel2__c</formula>
    <label>緊急連絡先2</label>
    <type>Text</type>
</CustomField>