force-app/main/default/objects/Contact/fields/tel3__c.field-meta.xml
<CustomField>
    <fullName>tel3__c</fullName>
    <formula>Account.tel3__c</formula>
    <label>緊急連絡先3</label>
    <type>Text</type>
</CustomField>