force-app/main/default/objects/Contact/fields/WayOfAttendance__c.field-meta.xml
<CustomField>
    <fullName>WayOfAttendance__c</fullName>
    <label>通園方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>通園バス</fullName>
            </value>
            <value>
                <fullName>徒歩</fullName>
            </value>
            <value>
                <fullName>自転車</fullName>
            </value>
            <value>
                <fullName>自家用車</fullName>
            </value>
            <value>
                <fullName>バイク</fullName>
            </value>
            <value>
                <fullName>電車</fullName>
            </value>
            <value>
                <fullName>バス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>