force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>Number__c</columns>
    <columns>FULL_NAME</columns>
    <columns>School__c</columns>
    <columns>Belongs__c</columns>
    <columns>AnotherAffiliation__c</columns>
    <columns>kana__c</columns>
    <columns>PassageRoute__c</columns>
    <columns>Sex__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Age__c</columns>
    <columns>EntryDate__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>RelationshipWithChildren1__c</columns>
    <columns>Guardian2__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての園児</label>
</ListView>