force-app/main/default/objects/Contact/listViews/classA.listView-meta.xml
<ListView>
    <fullName>classA</fullName>
    <columns>Image__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Sex__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>★★ぐみ</value>
    </filters>
    <label>★★組</label>
</ListView>